sonar adjusts